[package]
name = "pg_filters"
version = "0.1.10"
edition = "2021"
authors = ["Kingsley Hendrickse <kingsley.hendrickse@gmail.com>"]
description = "A simple rust helper to generate postgres sql for pagination, sorting and filtering"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/pg_filters/latest/pg_filters/"
readme = "README.md"
homepage = "https://github.com/kingsleyh/pg_filters"
repository = "https://github.com/kingsleyh/pg_filters"
keywords = ["postgres", "pagination", "filtering", "sorting", "sql"]
categories = ["data-structures", "web-programming"]

[lib]
name = "pg_filters"
path = "src/lib/mod.rs"

[dependencies]
eyre = "0.6.12"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
hex = "0.4.3"

[dev-dependencies]
testcontainers-modules = {  version = "0.9.0", features = ["postgres", "blocking"] }
tokio = {  version = "1", features = ["macros"] }
tokio-postgres = "0.7.11"