[package]
name = "pg_filters"
version = "0.1.17"
edition = "2021"
authors = ["Kingsley Hendrickse <kingsley.hendrickse@gmail.com>"]
description = "A simple rust helper to generate postgres sql for pagination, sorting and filtering"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/pg_filters/latest/pg_filters/"
readme = "README.md"
homepage = "https://github.com/kingsleyh/pg_filters"
repository = "https://github.com/kingsleyh/pg_filters"
keywords = ["postgres", "pagination", "filtering", "sorting", "sql"]
categories = ["data-structures", "web-programming"]

[lib]
name = "pg_filters"
path = "src/lib/mod.rs"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = {  version = "0.11.4", features = ["postgres", "blocking"] }
tokio = {  version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool = { version = "0.12.0", features = ["rt_tokio_1"] }
deadpool-postgres = "0.14.0"
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
